--- a/index.html
+++ b/index.html
@@ -3,7 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <title>AWS Quiz Challenge</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+  body {
+  font-family: 'Segoe UI', sans-serif;
+  background: #f0f4f8;
+  padding: 20px;
+  text-align: center;
+}
+
+.quiz-container {
+  max-width: 600px;
+  margin: auto;
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+#statusBar {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #333;
+}
+
+#question {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+#choices {
+  list-style: none;
+  padding: 0;
+}
+
+#choices li {
+  background: #e3eaf0;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+#choices li:hover {
+  background: #d0dce5;
+}
+
+.selected {
+  background-color: #ffd966;
+  border: 2px solid #f1c40f;
+  font-weight: bold;
+}
+
+.correct {
+  background-color: #c8e6c9;
+}
+
+.incorrect {
+  background-color: #ffcdd2;
+}
+
+#feedback {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#restartBtn {
+  background-color: #ff9900;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+</style>
 </head>
 <body>
   <div class="quiz-container">
@@ -23,7 +101,293 @@
     <div id="score">Score: 0</div>
   </div>
 
-  <script src="quizData.js"></script>
-  <script src="script.js"></script>
+  <script>
+const awsQuiz = [
+  {
+    question: "What does EC2 stand for in AWS?",
+    choices: ["Elastic Compute Cloud", "Enhanced Cloud Control", "External Compute Cluster", "Elastic Container Core"],
+    answer: 0,
+    explanation: "EC2 stands for Elastic Compute Cloud, which provides scalable virtual servers in the cloud.",
+    category: "Compute"
+  },
+  {
+    question: "Which AWS service is used for object storage?",
+    choices: ["Amazon RDS", "Amazon EC2", "Amazon S3", "Amazon EBS"],
+    answer: 2,
+    explanation: "Amazon S3 is designed for storing and retrieving any amount of data as objects.",
+    category: "Storage"
+  },
+  {
+    question: "Which AWS service provides serverless computing?",
+    choices: ["Amazon EC2", "AWS Lambda", "Amazon ECS", "Amazon EKS"],
+    answer: 1,
+    explanation: "AWS Lambda lets you run code without provisioning or managing servers.",
+    category: "Compute"
+  },
+  {
+    question: "Which AWS service is best suited for hosting a relational database?",
+    choices: ["Amazon DynamoDB", "Amazon RDS", "Amazon S3", "Amazon Redshift"],
+    answer: 1,
+    explanation: "Amazon RDS is a managed relational database service supporting multiple engines.",
+    category: "Database"
+  },
+  {
+    question: "Which service helps monitor AWS resources and applications?",
+    choices: ["AWS CloudTrail", "AWS CloudWatch", "AWS Config", "AWS Inspector"],
+    answer: 1,
+    explanation: "AWS CloudWatch collects metrics and logs for monitoring AWS resources.",
+    category: "Monitoring"
+  },
+  {
+    question: "What is the maximum size of an S3 object?",
+    choices: ["5 TB", "1 TB", "500 GB", "10 TB"],
+    answer: 0,
+    explanation: "Amazon S3 supports individual object sizes up to 5 terabytes.",
+    category: "Storage"
+  },
+  {
+    question: "Which AWS service is used for content delivery?",
+    choices: ["Amazon Route 53", "Amazon CloudFront", "Amazon S3", "AWS Direct Connect"],
+    answer: 1,
+    explanation: "Amazon CloudFront is a CDN that delivers content globally with low latency.",
+    category: "Networking"
+  },
+  {
+    question: "Which AWS service manages user access and permissions?",
+    choices: ["AWS IAM", "AWS KMS", "AWS Shield", "AWS WAF"],
+    answer: 0,
+    explanation: "AWS IAM lets you securely control access to AWS services and resources.",
+    category: "Security"
+  },
+  {
+    question: "Which AWS database is fully managed and NoSQL?",
+    choices: ["Amazon Aurora", "Amazon RDS", "Amazon DynamoDB", "Amazon Redshift"],
+    answer: 2,
+    explanation: "Amazon DynamoDB is a fast and flexible NoSQL database service.",
+    category: "Database"
+  },
+  {
+    question: "Which AWS service enables hybrid cloud storage?",
+    choices: ["AWS Snowball", "Amazon S3", "AWS Storage Gateway", "Amazon EBS"],
+    answer: 2,
+    explanation: "AWS Storage Gateway connects on-premises environments to AWS cloud storage.",
+    category: "Storage"
+  },
+  {
+    question: "Which AWS service provides scalable DNS?",
+    choices: ["Amazon CloudFront", "Amazon Route 53", "AWS IAM", "Amazon VPC"],
+    answer: 1,
+    explanation: "Amazon Route 53 is a scalable DNS service for routing traffic globally.",
+    category: "Networking"
+  },
+  {
+    question: "Which AWS service is used for data warehousing?",
+    choices: ["Amazon RDS", "Amazon DynamoDB", "Amazon Redshift", "Amazon S3"],
+    answer: 2,
+    explanation: "Amazon Redshift is a fully managed data warehouse for large-scale analytics.",
+    category: "Database"
+  },
+  {
+    question: "Which AWS service protects against DDoS attacks?",
+    choices: ["AWS Shield", "AWS WAF", "AWS IAM", "AWS Config"],
+    answer: 0,
+    explanation: "AWS Shield provides automatic protection against DDoS attacks.",
+    category: "Security"
+  },
+  {
+    question: "Which AWS service runs containers?",
+    choices: ["AWS Lambda", "Amazon ECS", "Amazon S3", "Amazon RDS"],
+    answer: 1,
+    explanation: "Amazon ECS is a container orchestration service for running Docker containers.",
+    category: "Compute"
+  },
+  {
+    question: "Which AWS service supports infrastructure as code?",
+    choices: ["AWS CloudFormation", "AWS Config", "AWS CloudTrail", "AWS CodeDeploy"],
+    answer: 0,
+    explanation: "AWS CloudFormation lets you define and provision AWS infrastructure using templates.",
+    category: "DevOps"
+  },
+  {
+    question: "Which AWS service provides managed Kubernetes?",
+    choices: ["Amazon ECS", "AWS Lambda", "Amazon EKS", "Amazon EC2"],
+    answer: 2,
+    explanation: "Amazon EKS is a managed Kubernetes service for running containerized applications.",
+    category: "Compute"
+  },
+  {
+    question: "Which AWS service tracks API calls?",
+    choices: ["AWS CloudTrail", "AWS CloudWatch", "AWS IAM", "AWS Config"],
+    answer: 0,
+    explanation: "AWS CloudTrail records AWS API calls and delivers log files to Amazon S3.",
+    category: "Monitoring"
+  },
+  {
+    question: "Which AWS service automates code deployment?",
+    choices: ["AWS CodeBuild", "AWS CodeDeploy", "AWS CodePipeline", "AWS CloudFormation"],
+    answer: 1,
+    explanation: "AWS CodeDeploy automates software deployments to various compute services.",
+    category: "DevOps"
+  },
+  {
+    question: "Which AWS service manages encryption keys?",
+    choices: ["AWS IAM", "AWS KMS", "AWS Shield", "AWS Secrets Manager"],
+    answer: 1,
+    explanation: "AWS KMS enables you to create and control encryption keys used to secure your data.",
+    category: "Security"
+  },
+  {
+    question: "Which AWS service provides secure secret storage?",
+    choices: ["AWS IAM", "AWS KMS", "AWS Secrets Manager", "AWS Shield"],
+    answer: 2,
+    explanation: "AWS Secrets Manager securely stores and rotates secrets like API keys and passwords.",
+    category: "Security"
+  }
+];
+
+</script>
+  <script>
+let currentQuestion = 0;
+let score = 0;
+let selectedIndex = null;
+let correctCount = 0;
+let incorrectCount = 0;
+
+const questionEl = document.getElementById("question");
+const choicesEl = document.getElementById("choices");
+const feedbackEl = document.getElementById("feedback");
+const scoreEl = document.getElementById("score");
+const submitBtn = document.getElementById("submitBtn");
+const nextBtn = document.getElementById("nextBtn");
+const restartBtn = document.getElementById("restartBtn");
+
+const questionNumberEl = document.getElementById("questionNumber");
+const totalQuestionsEl = document.getElementById("totalQuestions");
+const correctCountEl = document.getElementById("correctCount");
+const incorrectCountEl = document.getElementById("incorrectCount");
+
+let quiz = shuffleQuiz([...awsQuiz]);
+totalQuestionsEl.textContent = quiz.length;
+
+function shuffleQuiz(array) {
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+}
+
+function loadQuestion() {
+  const q = quiz[currentQuestion];
+  questionNumberEl.textContent = currentQuestion + 1;
+  questionEl.textContent = q.question;
+  choicesEl.innerHTML = "";
+  feedbackEl.textContent = "";
+  selectedIndex = null;
+
+
+const categoryEl = document.createElement("div");
+categoryEl.textContent = `📂 Category: ${quiz[currentQuestion].category}`;
+categoryEl.style.fontSize = "14px";
+categoryEl.style.marginBottom = "10px";
+questionEl.innerHTML = "";
+questionEl.appendChild(categoryEl);
+questionEl.appendChild(document.createTextNode(quiz[currentQuestion].question));
+
+
+  q.choices.forEach((choice, index) => {
+    const li = document.createElement("li");
+    li.textContent = choice;
+    li.onclick = () => selectChoice(index, li);
+    choicesEl.appendChild(li);
+  });
+
+  submitBtn.style.display = "inline-block";
+  nextBtn.style.display = "none";
+}
+
+function selectChoice(index, li) {
+  selectedIndex = index;
+  Array.from(choicesEl.children).forEach((el) => {
+    el.classList.remove("selected");
+  });
+  li.classList.add("selected");
+}
+
+submitBtn.onclick = () => {
+  if (selectedIndex === null) {
+    feedbackEl.textContent = "Please select an answer!";
+    return;
+  }
+
+  const correctAnswer = quiz[currentQuestion].answer;
+  const selectedLi = choicesEl.children[selectedIndex];
+
+  if (selectedIndex === correctAnswer) {
+    selectedLi.classList.add("correct");
+    feedbackEl.textContent = "✅ Correct!";
+    score += 1;
+    correctCount += 1;
+  } else {
+    selectedLi.classList.add("incorrect");
+    choicesEl.children[correctAnswer].classList.add("correct");
+    feedbackEl.textContent = "❌ Incorrect!";
+    incorrectCount += 1;
+  }
+
+  scoreEl.textContent = `Score: ${score}`;
+  correctCountEl.textContent = correctCount;
+  incorrectCountEl.textContent = incorrectCount;
+
+  Array.from(choicesEl.children).forEach((el) => {
+    el.onclick = null;
+  });
+
+const explanationText = quiz[currentQuestion].explanation;
+const explanationEl = document.createElement("div");
+explanationEl.textContent = `💡 Explanation: ${explanationText}`;
+explanationEl.style.marginTop = "10px";
+explanationEl.style.fontStyle = "italic";
+feedbackEl.appendChild(explanationEl);
+
+  submitBtn.style.display = "none";
+  nextBtn.style.display = "inline-block";
+};
+
+nextBtn.onclick = () => {
+  currentQuestion++;
+  if (currentQuestion < quiz.length) {
+    loadQuestion();
+  } else {
+    showFinalScore();
+  }
+};
+
+restartBtn.onclick = () => {
+  currentQuestion = 0;
+  score = 0;
+  correctCount = 0;
+  incorrectCount = 0;
+  quiz = shuffleQuiz([...awsQuiz]);
+  scoreEl.textContent = "Score: 0";
+  correctCountEl.textContent = "0";
+  incorrectCountEl.textContent = "0";
+  restartBtn.style.display = "none";
+  loadQuestion();
+};
+
+function showFinalScore() {
+  questionEl.textContent = "🎉 Quiz Complete!";
+  choicesEl.innerHTML = "";
+  feedbackEl.textContent = `You scored ${score} out of ${quiz.length}.`;
+  submitBtn.style.display = "none";
+  nextBtn.style.display = "none";
+  restartBtn.style.display = "inline-block";
+}
+
+// Start the quiz
+loadQuestion();
+
+</script>
 </body>
 </html>
