--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>AWS Quiz Challenge</title>
+  <link rel="stylesheet" href="style.css">
   <style>
   body {
   font-family: 'Segoe UI', sans-serif;
@@ -391,3 +392,4 @@ loadQuestion();
 </script>
 </body>
 </html>
+
