--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h1>☁️ AWS Quiz Challenge</h1>
+    <h1>☁️ AWS Quiz Challenge v1.1</h1>
     <div id="statusBar">
       Question: <span id="questionNumber">1</span> /
       <span id="totalQuestions">20</span> |
@@ -217,6 +217,7 @@ function showFinalScore() {
 </script>
 </body>
 </html>
+
 
 
 
