--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="score">Score: 0</div>
   </div>
   
-
+<script src="quizdata.js"></script>
  
   <script>
 let currentQuestion = 0;
@@ -173,6 +173,7 @@ loadQuestion();
 </script>
 </body>
 </html>
+
 
 
 
