--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <label for="quizSelector" style="font-weight: bold; margin-right: 10px;">Choose Quiz:</label>
   <select id="quizSelector">
     <option value="awsQuiz.js">AWS</option>
-    <option value="azureQuiz.js">Azure</option>
+    <option value="hybridQuiz.js">AWS Hybrid Networking</option>
     <option value="gcpQuiz.js">GCP</option>
   </select>
   <button id="loadQuizBtn">Load Quiz</button>
