--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <select id="quizSelector">
     <option value="awsQuiz.js">AWS</option>
     <option value="hybridQuiz.js">AWS Hybrid Networking</option>
-    <option value="gcpQuiz.js">GCP</option>
+    <option value="S3Quiz.js">AWS S3 Simple Storage Solution</option>
   </select>
   <button id="loadQuizBtn">Load Quiz</button>
 <div id="loadFeedback" style="margin-top: 10px; font-weight: bold;"></div>
