--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<!-- https://docs.aws.amazon.com/whitepapers/latest/aws-overview/amazon-web-services-cloud-platform.html -->
 
 
   <div class="quiz-container">
@@ -16,8 +17,10 @@
   <label for="quizSelector" style="font-weight: bold; margin-right: 10px;">Choose Quiz:</label>
   <select id="quizSelector">
     <option value="awsQuiz.js">AWS</option>
+	<option value="databaseQuiz.js">AWS Databases</option>
     <option value="hybridQuiz.js">AWS Hybrid Networking</option>
     <option value="S3Quiz.js">AWS S3 Simple Storage Solution</option>
+	<option value="storageQuiz.js">AWS Storage</option>
   </select>
   <button id="loadQuizBtn">Load Quiz</button>
 <div id="loadFeedback" style="margin-top: 10px; font-weight: bold;"></div>
